--- a/Web/TimeManagement/Views/Master/_PVEditWorkCodeActivity.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVEditWorkCodeActivity.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimeManagement.Models.WorkCodeActivity
+﻿@model TimeManagement.Models.WorkCodesActivity
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
