--- a/Web/TimeManagement/Views/Report/TimeByDate.cshtml
+++ b/Web/TimeManagement/Views/Report/TimeByDate.cshtml
@@ -72,6 +72,10 @@
         $('#workcode').select2({
             placeholder: "Select WorkCode",
         });
+        $('#workcodeActivity').select2({
+            placeholder: "Select workcodeActivity",
+        });
+
 
         $("#location").select2({
             placeholder: "Select Location",
@@ -79,8 +83,28 @@
 
     });
 
+    $(document.body).on("change", "#workcode", function () {
+        var empid = this.value;
+        // $('#WorkCodeActivities').val(null).trigger('change');
+       
+        if (empid != null) {
+            $('#workcodeActivity').select2({
 
+                ajax: {
+                    url: '/Report/GetWorkCodeActivities',
+                    data: { id: empid },
+                    dataType: 'json',
+                    success: function (data) {
+                        //$('#WorkCodeActivities').append(data);
+                        $('#workcodeActivity').select2({
+                            data: data,
+                        })
+                    }
+                }
+            })
+        }
 
+    });
     function fundate() {
         var fromdate = $('#fromdate').val();
         var todate = $('#todate').val();
@@ -131,11 +155,19 @@
         })
 
         var workcode_1 = '';
-        $('#workcode').find('option:selected').each(function () {
+        $('#workcodeActivity').find('option:selected').each(function () {
             if (workcode_1 != '') {
                 workcode_1 = workcode_1 + ','
             }
             workcode_1 = workcode_1 + $(this).val();
+
+        })
+        var workcodeActivity_1 = '';
+        $('#workcodeActivity').find('option:selected').each(function () {
+            if (workcodeActivity_1 != '') {
+                workcodeActivity_1 = workcodeActivity_1 + ','
+            }
+            workcodeActivity_1 = workcodeActivity_1 + $(this).val();
 
         })
 
@@ -161,14 +193,14 @@
                 aoData.push({ name: 'toDate', value: $('#todate').val() });
                 aoData.push({ name: 'location', value: location_l });
                 aoData.push({ name: 'project', value: project_1 });
-                aoData.push({ name: 'workcode', value: workcode_1 });
+                aoData.push({ name: 'workcodeActivity', value: workcode_1 });
                 aoData.push({ name: 'employee', value: $('#employee').val() });
             },
             "aoColumns": [{ "mData": "LocationName", "sTitle": "Location" }
                                         , { "mData": "EmployeeName", "sTitle": "User Name" }
                                         , { "mData": "Date", "sTitle": "Date", "sClass": "text-center" }
                                         , { "mData": "ProjectName", "sTitle": "Project" }
-                                        , { "mData": "WorkCodeName", "sTitle": "Work Code" }
+                                        , { "mData": "WorkCodeName", "sTitle": "WorkCode Activity" }
                                         , { "mData": "Hours", "sTitle": "Hours", "sClass": "text-center"}
                                         , { "mData": "Description", "sTitle": "Description" }
 
@@ -192,79 +224,92 @@
                 <div class="col-lg-12 gap-bottom10">
                     @using (Html.BeginForm("GetTimeByDate", "Report", FormMethod.Post))
                     {
-                        <div class="col-lg-2">
-                            <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>From Date</b>
-                            </div>
-                            <div class="col-lg-12 pad0">
-                                <input type="text" id="fromdate" class="form-control datePicker required" placeholder="From"
-                                       name="fromDate" />
-                                <div id="fdate" class="hidden">
-                                    From Date Required
+                        <div div class="row">
+                            <div class="col-lg-2">
+                                <div class="col-lg-12 pad0 gap-bottom5">
+                                    <b>From Date</b>
+                                </div>
+                                <div class="col-lg-12 pad0">
+                                    <input type="text" id="fromdate" class="form-control datePicker required" placeholder="From"
+                                           name="fromDate" />
+                                    <div id="fdate" class="hidden">
+                                        From Date Required
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="col-lg-2">
-                            <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>To Date</b>
-                            </div>
-                            <div class="col-lg-12 pad0">
-                                <input type="text" id="todate" class="form-control datePicker required" placeholder="To"
-                                       name="toDate" />
-                                <div id="tdate" class="hidden">
-                                    To Date Required
+                            <div class="col-lg-2">
+                                <div class="col-lg-12 pad0 gap-bottom5">
+                                    <b>To Date</b>
+                                </div>
+                                <div class="col-lg-12 pad0">
+                                    <input type="text" id="todate" class="form-control datePicker required" placeholder="To"
+                                           name="toDate" />
+                                    <div id="tdate" class="hidden">
+                                        To Date Required
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         if (User.IsInRole("Administrator"))
                         {
-                            <div class="col-lg-2">
-                                <div class="col-lg-12 pad0 gap-bottom5">
-                                    <b>Location</b>
-                                </div>
-                                <div class="col-lg-12 pad0">
-                                    @Html.DropDownList("locations", null, " ", new { @class = "form-control", id = "location", multiple = "multiple" })
-                                </div>
-                            </div>
-                            <div class="col-lg-2">
-                                <div class="col-lg-12 pad0 gap-bottom5">
-                                    <b>Project</b>
-                                </div>
-                                <div class="col-lg-12 pad0">
-                                    @Html.DropDownList("Projects", null, " ", new { @class = "form-control", id = "project" , multiple = "multiple" })
-                                </div>
-                            </div>
-                            <div class="col-lg-2">
-                                <div class="col-lg-12 pad0 gap-bottom5">
-                                    <b>Work Code</b>
-                                </div>
-                                <div class="col-lg-12 pad0">
-                                    @Html.DropDownList("WorkCodes", null, " ", new { @class = "form-control", id = "workcode" , multiple = "multiple" })
-                                </div>
-                            </div>
-                            <div class="col-lg-2">
-                                <div class="col-lg-12 pad0 gap-bottom5">
-                                    <b>Employee</b>
-                                </div>
-                                <div class="col-lg-12 pad0">
-                                    @Html.DropDownList("Employees", null, " ", new { @class = "form-control", id = "employee" })
-                                </div>
-                            </div>
-                        }
-                        <div class="col-lg-12 gap-top5">
-                            <button type="button" onclick="return fundate();" class="btn btn-info pull-right gap-right10"
-                                    id="getreport">
-                                Submit
-                            </button>
-                        </div>
+                <div div class="row">
 
-                    }
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Location</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("locations", null, " ", new { @class = "form-control", id = "location", multiple = "multiple" })
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Project</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("Projects", null, " ", new { @class = "form-control", id = "project", multiple = "multiple" })
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Work Code</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("WorkCodes", new SelectList(ViewBag.WorkCodes, "key", "Value"), new { @class = "form-control", id = "workcode", multiple = "multiple" })
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>WorkCode Activity</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("WorkCodeActivity", null, " ", new { @class = "form-control", id = "workcodeActivity", multiple = "multiple" })
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Employee</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("Employees", null, " ", new { @class = "form-control", id = "employee" })
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-12">
-                    <span style="font-size: 12px">@ViewBag.Message</span>
-                </div>
-            </div>
+                                }
+                                <div class="col-lg-12 gap-top5">
+                                    <button type="button" onclick="return fundate();" class="btn btn-info pull-right gap-right10"
+                                            id="getreport">
+                                        Submit
+                                    </button>
+                                </div>
+
+                                }
+                            </div>
+                            <div class="col-lg-12">
+                                <span style="font-size: 12px">@ViewBag.Message</span>
+                            </div>
+                        </div>
             <div class="col-lg-12 gap-bottom10">
                 <table id="timeByDate" class="table table-striped table-bordered">
                 </table>
